Fix minor bug on mobile in which the background gradient would not fit the entire screen.

--- a/main/static/main/css/materialize.css
+++ b/main/static/main/css/materialize.css
@@ -1680,6 +1680,7 @@ html {
   -webkit-text-size-adjust: 100%;
   background: #022449; /* fallback color */
   background: radial-gradient(#A4B3B6 0%, #A77ABA 110%);
+  background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
   /* 2 */ }
